<resources>
    <string name="app_name">Tweather</string>
    <string name="current_weather">Current Weather</string>
    <string name="current_temperature">Current temperature</string>
    <string name="temperature">%1$f °C / %2$f °F</string>
    <string name="wind_speed_header">Wind Speed</string>
    <string name="wind_speed">%1$f meter/sec</string>
    <string name="loading">Loading...</string>
    <string name="next_five_days">Next 5 days</string>
    <string name="standard_deviation">Standard Deviation</string>
    <string name="current_weather_error">Failed fetching current weather</string>
    <string name="std_dev_error">Failed fetching standard deviation</string>
</resources>
