<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/current_weather_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/current_weather" />

        <TextView
            android:id="@+id/temperature_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/current_weather_header"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/current_temperature"/>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/temperature_header"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="14 °C / 39 °F"/>

        <TextView
            android:id="@+id/wind_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/temperature"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/wind_speed_header"/>

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wind_header"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="20 mph"/>

        <ImageView
            android:id="@+id/cloud_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wind_speed"
            android:src="@drawable/ic_cloud"/>

        <Button
            android:id="@+id/next_five_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/cloud_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            android:text="@string/next_five_days"/>

        <TextView
            android:id="@+id/standard_deviation_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/next_five_button"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/standard_deviation"/>

        <TextView
            android:id="@+id/standard_deviation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/standard_deviation_header"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="100"/>

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/current_weather_header"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/current_weather_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="temperature_header,temperature,wind_header,wind_speed"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/standard_deviation_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="standard_deviation_header,standard_deviation"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
